# mistral-ocr

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_CONTENT_STORAGE.md  PROCESS.md  README.md  TEMPLATE_GUIDE.md  TEST_IMPROVEMENT_RECOMMENDATIONS.md  pyproject.toml  requirements.txt  test_review_analysis.md
examples/: database_content_demo.py  internal-error.json  main.py  new_processed_ocr_result_demo.py  simplified_architecture_demo.py
prompts/: f.py  fix-newlines.txt  input-test.txt  ld.html  ld.txt  out.txt
reference/: curl.md  mistral-ocr-implementation.md  mistral-ocr-usage.md
scripts/: batch-status  concat-files  docs_uuid.sql  download-all  list-jobs  ocr-list-docs  ocrdb  one-blank-line
specs/: 02_PSEUDOCODE.md  02_TODO.md  03_ARCHITECTURE.md  04_TEST_CASE_ENUMERATION.md  04_TEST_DESIGN.md  05_TEST_CASE_ENUMERATION.md  05_TEST_DESIGN.md  ARCHITECTURE.md  REQUIREMENTS.md
src/mistral_ocr/: __init__.py  __main__.py  _version.py  async_utils.py  audit.py  batch_job_manager.py  batch_manager_simplified.py  batch_submission_manager.py  client.py  client_simplified.py  config.py  constants.py  data_types.py  database.py  database_simplified.py  db_models.py  db_models_simplified.py  document_manager.py  exceptions.py  files.py  logging.py  models.py  parsing.py  paths.py  progress.py  result_manager.py  result_manager_simplified.py  settings.py  simple_cli.py  simple_client.py  types.py  validation.py
src/mistral_ocr/utils/: __init__.py  file_operations.py  retry_manager.py
tests/: README.md  conftest.py  factories.py  shared_fixtures.py  test_mistral_ocr.py  test_mistral_ocr.py.original
tests/integration/: __init__.py  test_advanced_options.py  test_cli_integration.py  test_error_handling.py  test_integration.py  test_job_status_listing.py
tests/unit/: __init__.py  test_async_utils.py  test_audit.py  test_basic_integrity.py  test_cli_subcommands.py  test_database_content_storage.py  test_document_management.py  test_file_operations.py  test_file_submission.py  test_job_management.py  test_logging_infrastructure.py  test_progress.py  test_result_retrieval.py  test_retry_manager.py  test_simple_client.py  test_validation.py
