[project]
name = "mistral-ocr"
version = "0.1.0"
description = "Command line tool to submit, query, and retrieve Mistral AI batch OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mistralai>=1.7.1",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "structlog>=25.3.0",
]

[project.scripts]
mistral-ocr="mistral_ocr.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I"]
