
[project]
name = "mistral-ocr"
version = "0.2.0"
description = "Command line tool to submit, query, and retrieve Mistral AI batch OCR"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Steven Greenberg", email = "steve@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ocr", "mistral", "ai", "batch", "text-extraction", "cli"]
dependencies = [
    "httpx>=0.28.1",
    "mistralai>=1.7.1",
    "pydantic>=2.11.5",
    "structlog>=25.3.0",
]

[project.scripts]
mistral-ocr = "mistral_ocr.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0", 
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.ruff.lint]
line-length = 100
target-version = "py312"
select = ["E", "F", "I"]

[tool.ruff]
line-length = 100
target-version = "py312"

